[package]
name = "extern-existential"
version = "0.1.2"
authors = ["Jethro Beekman <jethro@jbeekman.nl>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/jethrogb/extern-existential"
description = "Rust extern existential types prototype"

[dependencies]
core = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = '0.1.2', optional = true }

[features]
rustc-dep-of-std = ['core', 'compiler_builtins']
